<resources>
    <string name="app_name">InfoTrip</string>
    <string name="continua">Continue with</string>
    <string name="orText">--------------------or--------------------</string>
    <string name="emailSingUp">Sign-up with E-Mail</string>
    <string name="ButonemailSingUp">E-MAIL</string>
    <string name="testAlreadyhaveanaccount">Already have an account?</string>
    <string name="buttonLoginMainActivity">LOGIN</string>
    <string name="textViewFirstName">First Name</string>
    <string name="textViewLastName">Last Name</string>
    <string name="textViewBirthDate">Birth Date</string>
    <string name="textViewEmail">E-mail</string>
    <string name="textViewPass">Password</string>
    <string name="textViewCheckPass">Check Password</string>
    <string name="buttonSingUp">Sign-up</string>
    <string name="textRegister"><u>Register now.</u></string>
    <string name="textalready"><u>Already you have an account?LogIn.</u></string>
    <string name="spinnertext">Choose a country...</string>
    <string name="textView1">Traveling</string>
    <string name="textView2">Start a new Adventure</string>
    <string name="searchlocation">Search a new location</string>
    <string name="searchaccomodation">Search for accommodation</string>
    <string name="ghid">Survival guide</string>
    <string name="personalizeaza">Personalize your vacation</string>
    <string name="profil">Profil</string>
    <string name="logout">LogOut</string>
    <string name="navi_open">Open navigation</string>
    <string name="navi_close">Close navigation</string>
    <string name="photo">Photos</string>
    <string name="History">History</string>
    <string name="camere">Rooms</string>
    <string name="adulti">Adults</string>
    <string name="copii">Children</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="date">Choose a date</string>
    <string name="search">Search</string>
    <string name="facebook_app_id">625069008350158</string>
    <string name="fb_login_protocol_scheme">fb625069008350158</string>
    <string name="signOut">Sign Out</string>
    <string name="sort">Sort By</string>
    <string name="location">Locatia noastra...</string>
    <string name="descrireMmERIDIONALI">
        \t When you set up a weekend getaway in the mountains with\n
        friends or family, all you have to do is pack your bags.
         If,\n
            until now, your mountain luggage consists of a few sweaters /\n
            sweatshirts, sneakers or boots and a raincoat, if you want to go\n
            into the category of professionals and learn to pack a perfectly \n
            complete luggage in less than 30 minutes, we we come to your \n aid!\n
    <b>-->care products and cosmetics\n</b>
        <b>-->a raincoat\n</b>
        <b>-->a notebook / travel diary\n</b>
         <b>-->first aid kit\n</b>
         <b>-->mounting kit: LED flashlight, multifunctional knife\n</b>
         <b>-->car charger \n</b>
         <b>-->portcard\n</b>
         <b>-->external battery\n</b>
         <b>-->spare batteries\n</b>
         <b>-->sundial wristwatch\n</b>
         <b>-->protein bars for an energy boost\n</b>
         <b>-->cap or hat\n</b>
         <b>-->bag or detachable pocket compartmentalized\n</b>
         <b>-->medicines: antiallergic, anti-inflammatory, food supplements\n</b>
        <b> -->electronic compass\n</b>
         <b>-->led bracelet / led strap\n</b>
         <b>-->headlight\n</b>
         <b>-->portable water bottle\n</b>
         <b>-->Dried fruits\n</b>
        <b> -->Sunglasses\n</b>
         <b>-->camera\n</b>
         <b>-->portable coffee / tea kit\n</b>
        <b> -->Map\n</b>
    </string>
    <string name="what">Why choose mountain trails?</string>
    <string name="descriere"><u>Description</u></string>
    <string name="mess"><u>Search Accomodation RIGHT NOW!</u></string>
    <string name="googleplayservicesapi">AIzaSyBf7hKxub428BvuSnOk9OaPJdhIYHDI0yY</string>


    <string name="rute">
      \t To get rid of worries, we have prepared below a list of\n things
        and accessories that you should not miss from your \n
        mountain backpack in winter:\n

        -->thick socks\n
        -->heated scarf\n
        -->first layer, second layer\n
        -->hood for sports equipment\n
        -->hat with ears\n
        -->gloves (preferably made of softshell)\n
        -->frost cream, protective and moisturizing cream\n
        -->moisturizing lip balm\n
        -->goggles (for snow)\n
        -->winter jacket\n
        -->mountain boots (essential)\n
    </string>
    <string name="rute1">
      -->high protection sunscreen\n
        -->sunscreen for soothing affected skin\n
        -->polarized sunglasses\n
         -->cotton t-shirts and T-shirts\n
         -->mosquito repellent cream / spray\n
         -->a pair of sneakers that let your skin breathe\n
         -->cosmetics with SPF\n
         -->sport sandals (with flexible sole)\n
    </string>

    <string name="rute3">
      \tHere is what you need to take with you if you are going to go\n
        to the mountains with a tent:\n

            -->sleeping bag\n
            -->beds\n
            -->sleeping pad\n
            -->rain foil for tent\n
            -->pillow\n
            -->a comfortable backpack\n
            -->flashlight + additional batteries\n
            -->thermos / liquid container\n
    </string>
    <string name="title_activity_accomodation_google_maps">Map</string>
    <string name="title_activity_search_google_location">Map</string>
    <string name="title_activity_detalii_locatii">DetaliiLocatiiActivity</string>
    <string name="intrebare">How was your experience in this location?</string>
    <string name="rate">Rate:</string>
    <string name="add">ADD</string>
    <string name="RateUs">Rate Us! It`s very important!</string>


</resources>

