<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back6"
    android:scrollbarStyle="outsideInset"
    tools:context=".LocationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewnumeMuntiLocationActivity"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:fontFamily="@font/bungee"
                android:foregroundGravity="center"
                android:gravity="center|fill_horizontal"
                android:text="@string/location"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.049" />


            <ViewFlipper
                android:id="@+id/v_flipper"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerVertical="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewnumeMuntiLocationActivity"
                app:layout_constraintVertical_bias="0.09"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/txt1"
                android:layout_width="229dp"
                android:layout_height="58dp"
                android:drawableEnd="@drawable/descriere3"
                android:fontFamily="@font/bungee"
                android:text="@string/descriere"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_flipper"
                app:layout_constraintVertical_bias="0.043" />

            <TextView
                android:id="@+id/textViewDescrire"
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:fontFamily="@font/alegreya_bold"
                android:text="@string/descrireMmERIDIONALI"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt1"
                app:layout_constraintVertical_bias="0.045" />


            <TextView
                android:id="@+id/txt2"
                android:layout_width="251dp"
                android:layout_height="66dp"
                android:drawableEnd="@drawable/routes"
                android:fontFamily="@font/bungee"
                android:text="MOUNTAIN TRACES"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_flipper"
                app:layout_constraintVertical_bias="0.043" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewRoute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alegreya_bold"
                        android:text="@string/rute"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.494"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt1"
                        app:layout_constraintVertical_bias="0.045" />
                </ScrollView>
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="292dp"
                android:layout_height="73dp"
                android:drawableEnd="@drawable/what"
                android:fontFamily="@font/bungee"
                android:text="@string/what"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txt1"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescrire"
                app:layout_constraintVertical_bias="0.087" />

            <ViewFlipper
                android:id="@+id/v_flipper2"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_centerVertical="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.09"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:fontFamily="@font/alegreya_bold"
                android:onClick="openSearchAccom"
                android:text="@string/mess"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>