<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitati.ReviewActivity"
    android:background="@drawable/back8"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewIntrebare"
        android:layout_width="347dp"
        android:layout_height="83dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/intrebare"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="347dp"
        android:layout_height="172dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewIntrebare"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewIntrebare"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntrebare"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/Rate"
        android:layout_width="129dp"
        android:layout_height="44dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/rate"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.058" />

    <RatingBar
        android:id="@+id/ratingBarReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize="0.5"
        android:progressTint="#F9006C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/Rate"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAddReview"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ratingBarReview"
        app:layout_constraintStart_toStartOf="@+id/ratingBarReview"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarReview"
        android:background="@drawable/custom_button2"/>

</androidx.constraintlayout.widget.ConstraintLayout>